Added Swagger request bodies
